--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
 </head>
 
 <body>
-    <h1 id="inicio">Html Devoluper</h1>
+    <h1 id="inicio">Html Develuper</h1>
     <hr>
     <h2>Indíce</h2>
         <ul>
-            <li><a href="#html-pratica">Introdução ao html na Prática</a></li>
             <li><a href="#historia-web">História da Web</a></li>
-            <li><a href="#clients">Que são Clients</a> </li>
+            <li><a href="#clients"> O que são Clients</a> </li>
             <li><a href="#aplicacoes">Aplicações web</a></li>
             <li><a href="#servidores">Sobre servidores</a></li>
-            <li><a href="#links">Referências</a></li>
             <li><a href="#hardware_software">Hardware e Software para servidores</a></li>
+            <li><a href="#html-pratica">Introdução ao html na Prática</a></li>
+            <li><a href="#links">Referências</a></li>
 
         </ul>
     <small> <a href="#inicio">(voltar)</a></small>
@@ -56,7 +56,7 @@
 
     <h3 id="clients">O Que são Clients</h3>
         <p>
-            Cliente no vocabulario de programação, são basicamente dispositivos como computadores, celulares, notebooks, que
+            Clients no vocabulario de programação, são basicamente dispositivos como computadores, celulares, notebooks, que
             se comunicam com o servidor atraves da internet, ou seja, consomem informações. Esse acesso em muitos casos são
             feitos pelos navegadores que interpretam o html, css e javascript. 
         </p>
@@ -101,8 +101,65 @@
         <small> <a href="#inicio">(voltar)</a></small>
 
     <h2 id="html-pratica">Introdução ao html na Prática</h2>
-        <small> <a href="#inicio">(voltar)</a></small>
+        <p>
+            <h4>Html</h4>
+                HTML é uma linguagem de marcação que é usada para criar páginas da web. Ela é composta por tags, que são elementos que indicam ao navegador como o texto deve ser exibido.
+        </p>
 
+        <p>
+              <h4>Head</h4>  
+                A tag head é usada para armazenar informações sobre a página da web, como o título, os estilos e os scripts.
+        </p>
+
+        <p>
+            <h4>Title</h4>
+                A tag title é usada para definir o título da página da web. O título é exibido na barra de título do navegador.
+        </p>
+
+        <p>
+            <h4>Body</h4>
+            A tag body é usada para conter o conteúdo principal da página da web.
+        </p>
+
+        <p>
+            <h4>H1 a H6</h4>
+            As tags h1 a h6 são usadas para definir cabeçalhos de diferentes níveis de importância. O h1 é o cabeçalho mais importante e o h6 é o menos importante.
+        </p>
+
+        <p>
+            <h4>I</h4>
+            A tag <strong>I</strong> é usada para formatar o texto em <i>itálico</i>.
+        </p>
+
+        <p>
+            <h4>Strong</h4>
+            A tag strong é usada para formatar o texto em <strong>negrito</strong>.
+        </p>
+
+        <p>
+            <h4>A</h4>
+            A tag a é usada para criar um link para outra página da web ou para um recurso na web.
+        </p>
+
+        <p>
+            <h4>Ol</h4>
+            A tag ol é usada para criar uma lista numerada.
+        </p>
+
+        <p>
+            <h4>Ul</h4>
+            A tag ul é usada para criar uma lista com marcadores.
+        </p>
+
+        <p>
+            <h4>P</h4>
+            A tag p é usada para criar um parágrafo de texto.
+
+        </p>
+
+
+        <small> <a href="#inicio">(voltar)</a></small>
+      
     <h2 id="links">Referências</h2>
         
     <p>
